prevent undefined method error when we pass float to simple_format
simple_format expects text so we check that value respond_to? to_s and call to_s on value

--- a/app/views/rocket_job_mission_control/jobs/_attributes.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_attributes.html.erb
@@ -10,8 +10,10 @@
           <td><label><%= key %>:</label></td>
           <% if value.nil? %>
             <td><label>nil</label></td>
+          <% elsif !value.respond_to?(:to_s)%>
+            <td><label>Invalid Value</label></td>
           <% else %>
-            <td><%= simple_format(value) %></td>
+            <td><%= simple_format(value.to_s) %></td>
           <% end %>
         </tr>
       <% end %>
