--- a/app/views/rocket_job_mission_control/jobs/_attributes.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_attributes.html.erb
@@ -10,10 +10,8 @@
           <td><label><%= key %>:</label></td>
           <% if value.nil? %>
             <td><label>nil</label></td>
-          <% elsif !value.respond_to?(:to_s)%>
-            <td><label>Invalid Value</label></td>
           <% else %>
-            <td><%= simple_format(value.to_s) %></td>
+            <td><%= value.is_a?(String) ? simple_format(value) : value %></td>
           <% end %>
         </tr>
       <% end %>
@@ -38,7 +36,7 @@
                     <pre><code><%= pretty_print_array_or_hash(item) %></code></pre>
                   </td>
                 <% else %>
-                  <td><%= item %></td>
+                  <td><%= item.is_a?(String) ? simple_format(item) : item %></td>
                 <% end %>
               </tr>
               <% first = false %>
@@ -50,7 +48,7 @@
                     <pre><code><%= pretty_print_array_or_hash(item) %></code></pre>
                   </td>
                 <% else %>
-                  <td><%= item %></td>
+                  <td><%= item.is_a?(String) ? simple_format(item) : item %></td>
                 <% end %>
               </tr>
             <% end %>
@@ -79,7 +77,7 @@
                             <pre><code><%= pretty_print_array_or_hash(value2) %></code></pre>
                           </td>
                         <% else %>
-                          <td><%= value2 %></td>
+                          <td><%= value2.is_a?(String) ? simple_format(value2) : value2 %></td>
                         <% end %>
                       </tr>
                     <% end %>
