--- a/app/views/rocket_job_mission_control/jobs/_output_categories.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_output_categories.html.erb
@@ -2,7 +2,7 @@
 <% @job.output_categories.each do |category| %>
   <div class='row'>
     <div class='col-md-12'>
-      <div class='status-message'><label><%= category.name.to_s.camelcase %>:</label></div>
+      <div class='lead'><label><%= category.name.to_s.camelcase %>:</label></div>
       <div class='row'>
         <div class='col-md-12'>
           <table>
@@ -30,26 +30,15 @@
               <% if category.format_options %>
                 <tr>
                   <td><label>Format Options:</label></td>
-                  <td><pre><code><%= category.format_options.ai(plain: true, ruby19_syntax: true, sort_keys: true) %></code></pre></td>
+                  <td><%= category.format_options.ai(html:true, plain: true, ruby19_syntax: true, sort_keys: true) %></td>
                 </tr>
               <% end %>
             <% end %>
             <% if category.columns %>
-              <% first = true %>
-              <% category.columns.each do |item| %>
-                <% if first %>
-                  <tr>
-                    <td><label>Columns:</label></td>
-                    <td><%= item %></td>
-                  </tr>
-                  <% first = false %>
-                <% else %>
-                  <tr>
-                    <td></td>
-                    <td><%= item %></td>
-                  </tr>
-                <% end %>
-              <% end %>
+              <tr>
+                <td><label>Columns:</label></td>
+                <td><%= category.columns.ai(html: true, plain: true) %></td>
+              </tr>
             <% end %>
           </table>
         </div>
