--- a/app/assets/stylesheets/rocket_job_mission_control/application.css
+++ b/app/assets/stylesheets/rocket_job_mission_control/application.css
@@ -10,11 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require bootstrap.min
- *= require fontawesome-all.min
- *= require selectize
- *= require selectize.bootstrap3
- *= require datatables.min
+ *= require rocket_job_mission_control/bootstrap.min
+ *= require rocket_job_mission_control/fontawesome-all.min
+ *= require rocket_job_mission_control/selectize
+ *= require rocket_job_mission_control/selectize.bootstrap3
+ *= require rocket_job_mission_control/datatables.min
  *= require rocket_job_mission_control/base
  *= require rocket_job_mission_control/callout
  *= require rocket_job_mission_control/jobs
