Disable turbolinks caching for jquery datatable; see https://github.com/turbolinks/turbolinks/issues/106#issuecomment-417420493

--- a/app/views/rocket_job_mission_control/jobs/index.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/index.html.erb
@@ -16,7 +16,7 @@
       </div>
 
       <div class="panel-body">
-        <table class='table datatable jobs-datatable' data-source='<%= @data_table_url %>' style='width: 100%'>
+        <table class='table datatable jobs-datatable' data-turbolinks='false' data-source='<%= @data_table_url %>' style='width: 100%'>
           <thead>
             <tr>
               <% @columns.each do |column| %>
