Disable turbolinks caching for jquery datatable; see https://github.com/turbolinks/turbolinks/issues/106#issuecomment-417420493

--- a/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <table class='table datatable dirmon-datatable' data-source='<%= @data_table_url %>' style='width: 100%'>
+    <table class='table datatable dirmon-datatable' data-turbolinks='false' data-source='<%= @data_table_url %>' style='width: 100%'>
       <thead>
         <tr>
           <th>Name</th>
