--- a/app/views/rocket_job_mission_control/servers/index.html.erb
+++ b/app/views/rocket_job_mission_control/servers/index.html.erb
@@ -35,7 +35,7 @@
         </div>
       </div>
 
-      <table class='table datatable servers-datatable' data-source='<%= @data_table_url %>' style='width: 100%'>
+      <table class='table datatable servers-datatable' data-turbolinks='false' data-source='<%= @data_table_url %>' style='width: 100%'>
         <thead>
           <tr>
             <th>Hostname : PID</th>
