--- a/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/show.html.erb
@@ -1,43 +1,36 @@
-<div class='col-md-12 job-status'>
+<div class='row'>
   <div id='job'>
-    <div class='lead'><%= @dirmon_entry.name %></div>
+    <div class='lead'><%= image_tag('rocket_job_mission_control/rocket-icon-64x64.png') %><%= @dirmon_entry.name %>
 
-    <div class='job-state inline-block'>
-      <div class='left'>status</div>
-      <div class="<%= @dirmon_entry.state %> right"><%= @dirmon_entry.state %></div>
-    </div>
+      <div class='btn-toolbar job-actions'>
+        <div class='btn-group'>
+          <% if @dirmon_entry.may_enable? && can?(:enable, @dirmon_entry) %>
+            <%= link_to 'Enable', enable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: 'btn btn-default', data: {confirm: 'Are you sure you want to enable this Dirmon Entry?'} %>
+          <% end %>
+          <% if @dirmon_entry.may_disable? && can?(:disable, @dirmon_entry) %>
+            <%= link_to 'Disable', disable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: 'btn btn-default', data: {confirm: 'Are you sure you want to disable this Dirmon Entry?'} %>
+          <% end %>
+        </div>
 
-    <div class='btn-toolbar job-actions'>
-      <div class='btn-group'>
-        <% if (@dirmon_entry.disabled? || @dirmon_entry.pending?) && can?(:enable, @dirmon_entry) %>
-          <%= link_to 'Enable', enable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: 'btn btn-default' %>
-        <% end %>
-        <% if @dirmon_entry.enabled? && can?(:disable, @dirmon_entry)%>
-          <%= link_to 'Disable', disable_dirmon_entry_path(@dirmon_entry.id), method: :put, class: 'btn btn-default', data: { confirm: 'Are you sure?' } %>
-        <% end %>
-      </div>
-
-
-      <div class='btn-group'>
-        <% if can?(:destroy, @dirmon_entry)%>
-        <%= link_to 'Destroy', dirmon_entry_path(@dirmon_entry), method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure?' } %>
-        <% end %>
-      </div>
-      <%# It shows the Copy button in each Dirmon%>
-      <div class='btn-group'>
-        <% if can?(:copy, @dirmon_entry)%>
-        <%= link_to 'Copy', copy_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
-        <% end %>
-      </div>
-      <div class='btn-group'>
-        <% if can?(:edit, @dirmon_entry)%>
-        <%= link_to 'Edit', edit_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
-        <% end %>
+        <div class='btn-group'>
+          <% if can?(:destroy, @dirmon_entry) %>
+            <%= link_to 'Destroy', dirmon_entry_path(@dirmon_entry), method: :delete, class: 'btn btn-default', data: {confirm: 'Are you sure?'} %>
+          <% end %>
+        </div>
+        <div class='btn-group'>
+          <% if can?(:copy, @dirmon_entry) %>
+            <%= link_to 'Copy', copy_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
+          <% end %>
+        </div>
+        <div class='btn-group'>
+          <% if can?(:edit, @dirmon_entry) %>
+            <%= link_to 'Edit', edit_dirmon_entry_path(@dirmon_entry), class: 'btn btn-default' %>
+          <% end %>
+        </div>
       </div>
     </div>
-
-    <div class='clearfix'></div>
-
-    <%= render partial: 'status', locals: {dirmon_entry: @job} %>
   </div>
 </div>
+<%= render partial: 'details', locals: {dirmon_entry: @dirmon_entry} %>
+<%= render partial: 'properties', locals: {dirmon_entry: @dirmon_entry} %>
+<%= render partial: 'exception', locals: {dirmon_entry: @dirmon_entry} if @dirmon_entry.exception %>
