Replace turbolinks with turbo-rails

--- a/app/views/layouts/rocket_job_mission_control/application.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/application.html.erb
@@ -17,8 +17,8 @@
 
     <%= yield :meta %>
 
-    <%= stylesheet_link_tag "rocket_job_mission_control/application", media: 'all', "data-turbolinks-track": "reload" %>
-    <%= javascript_include_tag "rocket_job_mission_control/application", "data-turbolinks-track": "reload" %>
+    <%= stylesheet_link_tag "rocket_job_mission_control/application", media: 'all', "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "rocket_job_mission_control/application", "data-turbo-track": "reload" %>
 
     <%= csrf_meta_tag %>
   </head>
