--- a/app/views/rocket_job_mission_control/active_workers/index.html.erb
+++ b/app/views/rocket_job_mission_control/active_workers/index.html.erb
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <table class='table datatable active-workers-datatable' data-turbolinks='false' data-source='<%= active_workers_url(format: 'json') %>' style='width: 100%'>
+    <table class='table datatable active-workers-datatable' data-turbo='false' data-source='<%= active_workers_url(format: 'json') %>' style='width: 100%'>
       <thead>
         <tr>
           <th>Worker Name</th>
