--- a/app/views/rocket_job_mission_control/jobs/_exceptions.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_exceptions.html.erb
@@ -1,4 +1,4 @@
-<table class='table datatable jobs-datatable' data-turbolinks='false' data-source='<%= jobs_url(format: 'json') %>' style='width: 100%'>
+<table class='table datatable jobs-datatable' data-turbo='false' data-source='<%= jobs_url(format: 'json') %>' style='width: 100%'>
   <thead>
   <tr>
     <th>Count</th>
